--- a/views/admin/all-user.ejs
+++ b/views/admin/all-user.ejs
@@ -309,133 +309,7 @@
                                 <div class="button-show-hide">
                                     <i class="icon-menu-left"></i>
                                 </div>
-                                <form class="form-search flex-grow">
-                                    <fieldset class="name">
-                                        <input type="text" placeholder="Search here..." class="show-search" name="name"
-                                            tabindex="2" value="" aria-required="true" required="">
-                                    </fieldset>
-                                    <div class="button-submit">
-                                        <button class="" type="submit"><i class="icon-search"></i></button>
-                                    </div>
-                                    <div class="box-content-search" id="box-content-search">
-                                        <ul class="mb-24">
-                                            <li class="mb-14">
-                                                <div class="body-title">Top selling product</div>
-                                            </li>
-                                            <li class="mb-14">
-                                                <div class="divider"></div>
-                                            </li>
-                                            <li>
-                                                <ul>
-                                                    <li class="product-item gap14 mb-10">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/17.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Dog Food
-                                                                    Rachael Ray Nutrish®</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="mb-10">
-                                                        <div class="divider"></div>
-                                                    </li>
-                                                    <li class="product-item gap14 mb-10">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/18.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Natural
-                                                                    Dog Food Healthy Dog Food</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="mb-10">
-                                                        <div class="divider"></div>
-                                                    </li>
-                                                    <li class="product-item gap14">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/19.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Freshpet
-                                                                    Healthy Dog Food and Cat</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                        <ul class="">
-                                            <li class="mb-14">
-                                                <div class="body-title">Order product</div>
-                                            </li>
-                                            <li class="mb-14">
-                                                <div class="divider"></div>
-                                            </li>
-                                            <li>
-                                                <ul>
-                                                    <li class="product-item gap14 mb-10">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/20.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Sojos
-                                                                    Crunchy Natural Grain Free...</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="mb-10">
-                                                        <div class="divider"></div>
-                                                    </li>
-                                                    <li class="product-item gap14 mb-10">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/21.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Kristin
-                                                                    Watson</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="mb-10">
-                                                        <div class="divider"></div>
-                                                    </li>
-                                                    <li class="product-item gap14 mb-10">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/22.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Mega
-                                                                    Pumpkin Bone</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="mb-10">
-                                                        <div class="divider"></div>
-                                                    </li>
-                                                    <li class="product-item gap14">
-                                                        <div class="image no-bg">
-                                                            <img src="images/products/23.png" alt="">
-                                                        </div>
-                                                        <div class="flex items-center justify-between gap20 flex-grow">
-                                                            <div class="name">
-                                                                <a href="product-list.html" class="body-text">Mega
-                                                                    Pumpkin Bone</a>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </form>
+                               
                             </div>
                             <div class="header-grid">
                                 <div class="header-item country">
@@ -791,10 +665,10 @@
                                 <div class="wg-box">
                                     <div class="flex items-center justify-between gap10 flex-wrap">
                                         <div class="wg-filter flex-grow">
-                                            <form class="form-search">
+                                            <form class="form-search" action="/admin/all-user"  method="GET">
                                                 <fieldset class="name">
-                                                    <input type="text" placeholder="Search here..." class="" name="name"
-                                                        tabindex="2" value="" aria-required="true" required="">
+                                                    <input type="text" placeholder="Search here..." class="" name="query"
+                                                        tabindex="2" value="<%=query%>" aria-required="true" required="">
                                                 </fieldset>
                                                 <div class="button-submit">
                                                     <button class="" type="submit"><i class="icon-search"></i></button>
@@ -807,9 +681,6 @@
                                         <ul class="table-title flex gap20 mb-14">
                                             <li>
                                                 <div class="body-title-5">Name</div>
-                                            </li>
-                                            <li>
-                                                <div class="body-title-7">Password</div>
                                             </li>
                                             <li>
                                                 <div class="body-title-6">Email</div>
@@ -833,9 +704,6 @@
                                                                 <%= user.name %>
                                                             </a>
                                                             <!-- <div class="text-tiny mt-3"><%= user.productName %></div> -->
-                                                        </div>
-                                                        <div class="body-text-1">
-                                                            <%= user.password %>
                                                         </div>
                                                         <div class="body-text-2">
                                                             <%= user.email %>
@@ -871,13 +739,10 @@
                                                                 }
                                                             }
                                                         </script>
-                                                        
-
-
 
                                                         <div class="list-icon-function">
                                                             <div class="item eye">
-                  <a href="">  <i class="icon-eye"></i></a>                                            
+                                                     <a href="">  <i class="icon-eye"></i></a>                                            
                                                             </div>
                                                             <div class="item edit"> 
                                                             <a href="/admin/edit-user/<%=user._id%>"><i class="icon-edit-3"></i></a>
@@ -893,23 +758,28 @@
                                 </div>
                                 <div class="divider"></div>
                                 <div class="flex items-center justify-between flex-wrap gap10">
-                                    <div class="text-tiny">Showing 10 entries</div>
+                                    <div class="text-tiny">Showing <%= limit %> entries</div>
                                     <ul class="wg-pagination">
-                                        <li>
-                                            <a href="#"><i class="icon-chevron-left"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#">1</a>
-                                        </li>
-                                        <li class="active">
-                                            <a href="#">2</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">3</a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="icon-chevron-right"></i></a>
-                                        </li>
+                                        <!-- Previous page button -->
+                                        <% if (page > 1) { %>
+                                            <li>
+                                                <a href="?page=<%= page - 1 %>&limit=<%= limit %>"><i class="icon-chevron-left"></i></a>
+                                            </li>
+                                        <% } %>
+                                        
+                                        <!-- Page numbers -->
+                                        <% for (let i = 1; i <= totalPages; i++) { %>
+                                            <li class="<%= page === i ? 'active' : '' %>">
+                                                <a href="?page=<%= i %>&limit=<%= limit %>"><%= i %></a>
+                                            </li>
+                                        <% } %>
+                            
+                                        <!-- Next page button -->
+                                        <% if (page < totalPages) { %>
+                                            <li>
+                                                <a href="?page=<%= page + 1 %>&limit=<%= limit %>"><i class="icon-chevron-right"></i></a>
+                                            </li>
+                                        <% } %>
                                     </ul>
                                 </div>
                             </div>
